<resources>
    <string name="app_name">ZipAPP</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="search_title">What do you want to search ?</string>
    <string name="select_language">Select Language:</string>
    <string name="new_acount">Create a new Account?</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="login_question">"If you already have an account? Sign in now! "</string>
    <string name="btn_signup">Register</string>
    <string name="re_password">Re_password</string>
    <string name="email">Email</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="tv_searchwith">Search with...</string>
    <string name="language">Language</string>
    <string name="tv_search_with">Search With</string>
    <string name="account">Account</string>
    <string name="details">Details</string>
    <string name="about">About</string>
    <string name="history">History</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="back">Back</string>
    <string name="changelanguage">Change</string>
    <string name="copy_link">Copy link</string>
    <string name="search_here">Search here ...</string>
    <string name="introduce_content_text">This is an application that allows you to search for information by image, making it easy to find products on websites.</string>
    <string name="speech_not_supported">Speech not supported !</string>
    <string name="client_id">1020756383763-3qb2jhufndl8og79a8e12er12sf4l9hf.apps.googleusercontent.com</string>
    <string name="client_secret">zAb3-eryaFANXVlrq9gPbTsz</string>
    <string name="log_out">Log out</string>
    <string name="sign_in_question">Sign in for a better experience?</string>
    <string name="skip">skip</string>
    <string name="copied">Copied!</string>
    <string name="deleted">Deleted!</string>
    <string name="no_record_found">No record found!</string>
    <string name="can_not_delete_link">Can not delete this link ! Please check again !</string>
    <string name="copy">Copy</string>
    <string name="delete">Delete</string>
    <string name="delete_all">Delete All</string>
</resources>
