<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingTop="5dp"
        android:paddingRight="24dp">

        <ImageView
            android:id="@+id/imgLogoLogin"
            android:layout_width="170dp"
            android:layout_height="120dp"
            android:transitionName="trans_logo"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="50dp"
            android:src="@drawable/logo" />

        <TextView
            android:id="@+id/txtTitleLogin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:transitionName="trans_title"
            android:text= "@string/sign_in_question"
            android:textColor="@color/orange"
            android:textSize="22dp" />


    </LinearLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="20dp"
        android:layout_alignParentBottom="true">
        <TextView
            android:id="@+id/txtLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:textColor="@color/selector_txt"
            android:layout_alignParentRight="true"
            android:textSize="18sp"
            android:text="@string/login"/>
        <TextView
            android:id="@+id/txtSkip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:textColor="@color/selector_txt"
            android:textSize="18sp"
            android:text="@string/skip"/>
    </RelativeLayout>
</RelativeLayout>