<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/initwhite"
    tools:context=".IntroduceActivity">
    <ImageView
        android:id="@+id/imgBackIntro"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/ic_back_orange"
        android:layout_margin="20dp"/>

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:layout_margin="20dp"
            android:padding="20dp"
            android:background="@drawable/draw_button_white"
            android:orientation="vertical">
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/image_Avatar"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/logo"
                android:layout_gravity="center"
                android:contentDescription="@string/nav_header_desc"
                android:paddingTop="@dimen/nav_header_vertical_spacing"
                app:srcCompat="@mipmap/ic_launcher_round" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:textColor="@color/blue_grey_800"
                android:textSize="20dp"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/introduce_content_text"
                android:textSize="16sp"
                android:layout_gravity="center"
                android:layout_margin="20dp"/>


        </LinearLayout>
    </LinearLayout>

</FrameLayout>